# malm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/dag/: Cargo.toml
crates/dag/src/: lib.rs
docs/: profiles.md  templating.md
src/: api.rs  cas.rs  failpoint.rs  lib.rs  main.rs  paths.rs  sanitize.rs
src/app/: context.rs  mod.rs  prompt.rs  validation.rs
src/assets/: download.rs  extract.rs  installed_check.rs  mod.rs  model.rs  parser.rs
src/cli/: args.rs  dispatch.rs  mod.rs
src/config/: discovery.rs  kdl.rs  loader.rs  mod.rs  model.rs  profile.rs
src/domain/: id.rs  mod.rs  owner.rs
src/execution/: asset.rs  asset_restore.rs  executor.rs  mod.rs  prefetch.rs  remove.rs  session.rs  symlink.rs
src/fs/: atomic.rs  inspect.rs  lock.rs  mod.rs  util.rs
src/lang/: artifact.rs  ast.rs  budget.rs  compile.rs  config_file.rs  diag.rs  doctor.rs  expand.rs  kdl_util.rs  mod.rs  parse.rs  render.rs  resolve.rs  scope.rs  text.rs  typecheck.rs  value.rs
src/lang/config_file/: generic.rs
src/net/: http.rs  mod.rs
src/output/: display.rs  json.rs  meta.rs  mod.rs  plan.rs  policy.rs  state_list.rs  status.rs  transaction_log.rs
src/planning/: assets.rs  destination.rs  evaluation.rs  graph.rs  mod.rs  output.rs  plan.rs  planner.rs  stale.rs
src/policy/: advisory.rs  asset_policy.rs  destination.rs  findings.rs  mod.rs  model.rs  overrides.rs  remote_safety.rs  risk.rs  source_escape.rs
src/source/: git.rs  git_archive.rs  git_process.rs  git_url.rs  identity.rs  local.rs  mod.rs  store.rs
src/state/: active_deployment.rs  format.rs  gc.rs  mod.rs  ownership.rs  ownership_store.rs  pins.rs  record.rs  target_lock.rs  tracking.rs
src/state/integrity/: checks.rs  mod.rs  preflight.rs  report.rs
src/state/transaction/: id.rs  mod.rs  model.rs  store.rs
src/status/: mod.rs  ownership.rs
src/workflow/: apply.rs  bookkeeping.rs  check.rs  checkout.rs  destroy.rs  disable.rs  doctor.rs  enable.rs  frozen_plan.rs  fsck.rs  gc.rs  mod.rs  pipeline.rs  plan.rs  policy_gate.rs  profiles.rs  recover.rs  render.rs  risk_prompt.rs  source_resolution.rs  state_list.rs  status.rs  update.rs  vars.rs
tests/: apply_roundtrip.rs  assets.rs  checkout.rs  crash_matrix.rs  destroy.rs  disable_enable.rs  failpoints_canary.rs  generic_config_file.rs  hardening.rs  prune_basic.rs  recover.rs  render_hardening.rs  render_six_formats.rs  templating.rs  trust_and_verify.rs
tests/common/: mod.rs
