[package]
name = "malm"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Add crash-injection points for integration tests. Release builds reject this.
failpoints = []
# Expose archive parsers to fuzz targets without widening the normal public API.
fuzzing = []

[workspace]
members = [
  ".",
  "crates/dag"
]

[workspace.package]
edition = "2024"
version = "0.3.1"
authors = ["Christian Bendiksen <christian@bendiksen.me>"]
rust-version = "1.95.0"

[workspace.dependencies]
petgraph   = "0.8.3"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
semicolon_in_expressions_from_macros = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
branches_sharing_code = "warn"
cloned_instead_of_copied = "warn"
disallowed_types = "warn"
empty_line_after_outer_attr = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
map_flatten = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
nonstandard_macro_braces = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
uninlined_format_args = "warn"
unreadable_literal = "warn"
wildcard_imports = "warn"

literal_string_with_formatting_args = "allow"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir    = "2"
globset    = "0.4"
kdl        = { version = "^6", features = ["v1"] }
zip        = { version = "2", default-features = false, features = ["deflate"] }
miette     = { version = "7", features = ["fancy"] }
tempfile   = "^3.27"
sha2       = "0.10"
hex        = "0.4"
dirs       = "6"
filetime   = "0.2"
getrandom  = "0.4"
xattr      = "1"
tar        = "0.4"
xz2        = "0.1"
flate2     = "1"
dag = { path = "crates/dag" }
rayon      = "1.8"
owo-colors = "4.3"
rustix     = { version = "1", features = ["fs"] }
libc       = "0.2"
semver     = "1"
time       = "0.3.51"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
toml = "0.9"
roxmltree = "0.20"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-lua = "0.5"
tree-sitter-css = "0.23"

[dev-dependencies]
serde_json = "1"
tempfile = "^3.27"

[profile.release]
strip         = true
lto           = true
opt-level     = "s"
codegen-units = 1
